prosper202/prosper202.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prosper 
  name: prosper 
spec:
  type: LoadBalancer
  ports:
    - port: 80      
  selector:
    app: prosper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosper 
  labels:
    app: prosper 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosper 
  template:
    metadata:
      labels:
        app: prosper 
    spec:
      containers:
        - image: jerilcj3/php-docker-apache-example:8.2
          name: prosper
          securityContext:
            capabilities:
              add: ["SYS_TIME", "SYS_NICE"]
          ports:
            - containerPort: 80
              name: prosper
          volumeMounts:
          - mountPath: "/var/www/html"
            name: prosper-var-www
          # Health check
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /index.php
              port: 80
          resources:
            limits:
              memory: 384Mi
            requests:
              memory: 384Mi
      volumes:
        - name: prosper-var-www
          persistentVolumeClaim:
            claimName: prosper-pvc
